    o 27.06.2003: Version 2.0
    o 07.03.2003: Version 1.1
    o 06.12.2002: Version 1.0

_____________________________________________________________________________

 Changes from 4.11 to 5.0
_____________________________________________________________________________

BEAM 5.0 is a new major version.

Complete list of BEAM 5.0 bug fixes and improvements

New BEAM Features

Improvements

[BEAM-1603] Info tool window shall display data as table
[BEAM-1612] PGX reader plugin may take very long to determine decode qualification
[BEAM-1610] Move ENVI-Reader from Glob-Box to BEAM
[BEAM-1609] Convert Cloud Processor to GPF
[BEAM-1592] Line-Geometries shall be easier selectable
[BEAM-1588] Show close button on internal frames' tabs
[BEAM-1587] Allow closing internal frames by click with middle mouse button
[BEAM-1459] Allow aggregating pixel values even if not all pixels of the window are valid
[BEAM-1513] BEAM shall enable users to use Modified Julian Date (MJD) in band arithmetics

Bugs

[BEAM-1593] Harmonise transect + mask pixels outputs
[BEAM-1287] Default RGB profile of MERIS L1b is Landsat but should be Tristimulus
[BEAM-1452] Log-scaling is not correctly applied in scatter plot
[BEAM-1496] ApiDoc is generated with wrong version
[BEAM-1569] Documentation for 'statistical accuracy' missing
[BEAM-1190] Export button in the mask manager does not export geometry masks
[BEAM-1497] Command 'Time Series as Google Earth KMZ' misplaced in tools menu
[BEAM-1561] Slider labels of colour manipulation tool are all zero for small value ranges
[BEAM-1568] Numbers are displayed with too little #places after the comma
[BEAM-1508] No progress indication in VISAT when writing files
[BEAM-1514] ProductUtils.getScanLineTime fails for products with height 1
[BEAM-1564] Binning operator causes NPE with invalid graph XML

_____________________________________________________________________________

 Changes from 4.10.3 to 4.11